# RealDebridManager

./: .gitignore  Dockerfile  pyproject.toml  startscript.sh
.github/workflows/: push-docker-image.yaml
realdebridmanager/: RDtorrent.py  app.py  database.py  mainwebui.py
realdebridmanager/blackhole/: file_watch.py
realdebridmanager/blackhole/old/: FileWatch.py  RDmagnet.py
realdebridmanager/rd/: RealDebrid.py  task_watch.py
realdebridmanager/rd/api/: api.py
realdebridmanager/rd/downloads/: downloads.py
realdebridmanager/rd/settings/: settings.py
realdebridmanager/rd/streaming/: streaming.py
realdebridmanager/rd/time/: time.py
realdebridmanager/rd/torrent/: torrent.py
realdebridmanager/rd/user/: user.py
realdebridmanager/templates/: main.html  settings.html  task.html  toolbar.html
realdebridmanager/web/: settings.py  tasks.py
